feature: add campfire blog/news section

--- a/src/_posts/2019-02-24-test-post.md
+++ b/src/_posts/2019-02-24-test-post.md
@@ -1,18 +1,14 @@
 ---
-layout: post
 title: Test Post
 author: Gregory Daynes
 date: 2019-02-25T00:54:17.042Z
-post-tags:
+tags:
   - tag 1
   - tag 2
   - tag 3
 hero-image:
-  src: /images/uploads/gregdaynes_extremely_detailed_3_people_standing_in_front_of_a_s_01c242f6-dc41-4865-a1a4-aa255b9b9909.png
+  src: /images/uploads/a_kid_playing_hopscotch_illuminated_by_bright_colour.webp
   alt: fancy
-content-tags:
-  - content-tag: asdfadf
-  - content-tag: asdfadsfadf
 ---
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien mi, laoreet eu auctor sit amet, accumsan in tellus. Fusce purus odio, sollicitudin eu facilisis eget, viverra eget nisi. Cras lacus velit, iaculis vel nunc ut, rhoncus faucibus ligula. Phasellus augue lorem, pharetra ut euismod at, finibus vitae dui. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam auctor feugiat tellus. Ut iaculis urna in neque vestibulum, vitae efficitur eros ultricies. Nullam vitae enim ut mi ultrices pharetra a ut metus. Mauris congue mauris in metus posuere, in commodo lectus dapibus.
 
@@ -20,7 +16,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien mi, laoreet e
 
 Aenean lacus lacus, gravida vitae mauris in, tempor condimentum mi. Nulla auctor volutpat neque vel sollicitudin. Pellentesque tempus blandit erat, eu fermentum elit egestas quis. Maecenas nunc purus, ultrices at ullamcorper nec, sollicitudin eu quam. Nam ut nisl a felis porta sodales nec sed nisl. Aenean eget massa quis augue pharetra rutrum non nec felis. Proin vehicula nisl in ligula blandit molestie. Fusce ac elit felis. Praesent volutpat ultrices ligula, nec laoreet ipsum maximus in. Sed mollis nunc ex, ut tristique neque egestas eget.
 
-![Here's some super good alt text](/images/uploads/gregdaynes_a_group_of_people_playing_a_holographic_game_of_floo_68aa7799-e1ea-43c0-b1d6-e1ef6c8fbb9d.png)
+![Here's some super good alt text](/images/uploads/a_kid_playing_hopscotch_illuminated_by_bright_colour.webp)
 
 Duis bibendum id neque ac luctus. Cras euismod dapibus pharetra. Phasellus convallis malesuada nibh, vitae vulputate justo sodales nec. Nulla facilisi. Sed accumsan pharetra magna, non scelerisque tellus sagittis vitae. Donec molestie, sapien nec vehicula rhoncus, nibh nisi condimentum dui, sit amet mattis lorem velit efficitur nunc. Vivamus tristique vestibulum dolor, ut bibendum ante. Phasellus sit amet tincidunt justo. Curabitur vitae ornare ex. Etiam pharetra sem nulla, eget tincidunt dui suscipit nec. Pellentesque tincidunt elit sit amet justo ornare iaculis. Quisque fringilla ut est sit amet lacinia. Sed euismod interdum velit, elementum cursus nunc suscipit mattis. Nulla faucibus facilisis ipsum vel fringilla. Integer in commodo velit, at vestibulum tortor. Ut interdum tellus ut nibh lacinia fringilla.
 
